metadata/objects/ClubEvent__c.object
<CustomObject>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>All Responsible Ages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Site__c</fullName>
        <label>Event Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Promoter_Number__c</fullName>
        <label>Promoter Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>